--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -6,18 +6,6 @@
     font-family: $main-font;
     font-weight: 400;
     background-color: $bg-color-white;
-
-    @media screen and (max-width: 1080px) {
-        height: 400px;
-    }
-
-    @media screen and (max-width: 700px) {
-        text-align: center;
-        height: 660px;
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
-    }
 }
 
 .footer-logo {
@@ -37,11 +25,6 @@
         max-width: 245px;
         color: $text-color-dark;
     }
-
-    @media screen and (max-width: 910px) {
-        width: 232px;
-        align-items: center;
-    }
 }
 
 .footer-menu {
@@ -55,10 +38,6 @@
         font-size: 18px;
         line-height: 27px;
         color: $text-color-main;
-    }
-
-    @media screen and (max-width: 1080px) {
-        width: auto;
     }
 }
 
@@ -82,14 +61,12 @@
             font-size: 30px;
         }
     }
-
-    @media screen and (max-width: 910px) {
-        justify-content: flex-end;
-    }
-
-    @media screen and (max-width: 700px) {
-        justify-content: center;
-        align-items: center;
-        margin-top: -30px;
-    }
 }
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {}
