--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,11 @@
 @import './blocks/block_5';
 @import './blocks/block_6';
 @import './blocks/service';
-@import './blocks/feedback-form';
+
 @import './blocks/contacts';
 @import './blocks/footer';
 
+@import './blocks/title-container';
+@import './blocks/content-container';
+@import './blocks/feedback-form';
+@import './blocks/block-btn';
