--- a/scss/blocks/_block_5.scss
+++ b/scss/blocks/_block_5.scss
@@ -23,6 +23,23 @@
             justify-self: flex-end;
             align-self: flex-end;
         }
-
     }
 }
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .photos {
+        max-width: 720px;
+        min-height: 471px;
+        margin: 128px auto 35px;
+
+        &__item {
+            max-width: 353px;
+        }
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {}
