--- a/scss/blocks/_block_6.scss
+++ b/scss/blocks/_block_6.scss
@@ -5,10 +5,6 @@
     font-weight: 400;
 }
 
-.title-container {
-    margin-left: 245px;
-}
-
 .card-wrapper {
     display: flex;
     justify-content: space-between;
@@ -49,9 +45,70 @@
         max-height: 82px;
     }
 
-    &__slogan{
+    &__slogan {
         font-size: 24px;
         text-align: center;
     }
 }
 
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .convinience {
+        max-width: 579px;
+        // margin: 0 auto;
+        // font-family: $main-font;
+        // font-weight: 400;
+    }
+    
+    .card-wrapper {
+        display: flex;
+        justify-content: space-between;
+        max-width: 100%;
+        margin: 66px auto 54px;
+    }
+    
+    .card-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 337px;
+        min-width: 337px;
+        max-height: 328px;
+        min-height: 328px;
+        padding: 21px 19px 48px 19px;
+        background-color: $bg-color-light;
+        border: 1px solid #C4C4C4;
+        border-radius: 4px;
+    
+        &__button {
+            align-self: flex-start;
+            max-width: 160px;
+            min-width: 160px;
+            max-height: 44px;
+            min-height: 44px;
+            font-size: 20px;
+            text-align: center;
+            text-transform: uppercase;
+            color: $text-color-title;
+            background-color: rgba(215, 22, 53, 0.15);
+            border: none;
+            border-radius: 4px;
+        }
+    
+        &__image {
+            max-height: 82px;
+        }
+    
+        &__slogan {
+            font-size: 24px;
+            text-align: center;
+        }
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {}
