--- a/scss/blocks/_feedback-form.scss
+++ b/scss/blocks/_feedback-form.scss
@@ -1,174 +1,72 @@
-.form {
-    background-color: $bg-color-main;
-    color: $bg-color-white;
-    padding-top: 85px;
-    padding-bottom: 400px;
-
-    @media screen and (max-width: 700px) {
-        padding-bottom: 670px;
-    }
-
-    @media screen and (max-width: 390px) {
-        padding-top: 30px;
-    }
-}
-
-.form__inner {
-    display: flex;
-    justify-content: space-between;
-    gap: 200px;
-
-    @media screen and (max-width: 1031px) {
-        gap: 100px;
-    }
-
-    @media screen and (max-width: 940px) {
-        gap: 50px;
-    }
-
-    @media screen and (max-width: 910px) {
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 50px;
-        text-align: center;
-    }
-
-    @media screen and (max-width: 910px) {
-        margin-bottom: 20px;
-    }
-}
-
-.form__text {
-    width: 420px;
-    padding-right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 15px;
-
-    @media screen and (max-width: 750px) {
-        text-align: center;
-    }
-
-    @media screen and (max-width: 445px) {
-        max-width: 340px;
-    }
-}
-
-.form__title {
-    font-family: "RF Dewi Extended";
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 58px;
-    margin: 0;
-
-    @media screen and (max-width: 750px) {
-        font-size: 35px;
-    }
-
-    @media screen and (max-width: 390px) {
-        font-size: 25px;
-        line-height: 30px;
-    }
-}
-
-.form__subtitle {
-    width: 400px;
-
-    @media screen and (max-width: 390px) {
-        font-size: 16px;
-        line-height: 22px;
-    }
-}
-
-.form__main {
-    flex: 1;
+.feedback-form {
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
-
-    @media screen and (max-width: 420px) {
-        margin-top: -30px;
-    }
-}
-
-.form__main-input,
-.form__main-input-text {
-    border-radius: 6px;
-    border-color: transparent;
-    color: inherit;
-    font-size: 16px;
-    font-weight: 400;
-    background-color: inherit;
-    border: 1px solid #9BB6F3;
-
-}
-
-.form__main-input::placeholder,
-.form__main-input-text::placeholder {
-    color: #9BB6F3;
-    font-size: inherit;
-}
-
-.form__row {
-    display: flex;
-    gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr 1fr;
     justify-content: space-between;
+    max-width: 615px;
+    max-height: 360px;
 
-    @media screen and (max-width: 420px) {
-        flex-direction: column;
+    &__input {
+        background-color: $bg-color-main;
+        border: none;
     }
 }
 
-.form__main-input {
-    flex: 1;
-    padding: 5px 0 5px 18px;
-}
-
-.error .form__main-input {
-    border-color: $bg-color-main;
-}
-
-.form__main-input-text {
-    height: 115px;
-    padding: 5px 0 35px 18px;
-}
-
-.btn-row {
+.input-container {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    border: solid 2px rgba(255, 255, 255, 0.48);
+    border-radius: 4px;
+    color: $text-color-white;
 
-    @media screen and (max-width: 910px) {
-        align-items: center;
+    &_sm {
+        max-width: 298px;
+        min-height: 66px;
+    }
+
+    &_lg {
+        max-width: 605px;
+        min-height: 128px;
+        grid-column: 1/3;
+    }
+
+    &_sm,
+    &_lg {
+        margin-top: 6px;
+    }
+
+    &_sm {
+        margin-bottom: 6px;
+    }
+
+    &_lg {
+        margin-bottom: 17px;
     }
 }
 
-.form__main-button {
-    position: relative;
-    width: 239px;
-    margin-top: 30px;
-    padding: 10px 35px 10px 10px;
-    border-radius: 8px;
-    border-color: transparent;
-    background-color: $text-color-white;
-    color: $text-color-title;
-    font-size: 22px;
-    font-weight: 600;
-    cursor: pointer;
+.input-name {
+    margin-left: 17px;
+    margin-right: 17px;
+    font-size: 12px;
+}
 
-    @media screen and (max-width: 390px) {
-        width: 211px;
-        margin: 15px 50px;
+.input-field {
+    margin-left: 17px;
+    margin-right: 17px;
+    color: $text-color-white;
+    background-color: $bg-color-main;
+    border: none;
+
+    &::placeholder {
+        font-size: 16px;
+        color: $text-color-white;
     }
 }
 
-.form__main-button::after {
-    position: absolute;
-    content: '';
-    background-image: url(../../images/arrows/red_arrow.svg);
-    width: 26px;
-    height: 14px;
-    right: 25px;
-    bottom: 15px;
-}
+@media screen and (min-width: 1025px) and (max-width: 1440px) {}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {}
