--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'vars';
 @import 'mixins';
 
+@import './header';
 @import './blocks/banner';
 @import './blocks/products';
 @import './blocks/block_5';
@@ -12,4 +13,3 @@
 @import './blocks/feedback-form';
 @import './blocks/contacts';
 @import './blocks/footer';
-
