--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 
 @import './header';
 @import './blocks/banner';
+@import './blocks/about';
 @import './blocks/products';
 @import './blocks/block_5';
 @import './blocks/block_6';
