--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,12 @@
 html,
 body {
     height: 100%;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
 }
 
 .wrapper {
