--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,1 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&display=swap");
+// @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
