--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 @import './blocks/banner';
 @import './blocks/about';
 @import './blocks/products';
-@import './blocks/block_5';
+@import './blocks/photos';
 @import './blocks/block_6';
 @import './blocks/service';
 
