--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -5,28 +5,55 @@
     //     border: 1px solid purple;
     // }
 
-    &__title {}
+    &__title-group {
+        display: flex;
+        width: 80%;
+        margin: 0 auto;
+
+        img {
+            width: 10%;
+        }
+    }
+
+    &__title {
+        margin-left: 20px;
+        @include font-style (600, $title-font-size, 40px);
+        color: $text-color-title;
+    }
 
     &__shampoo {}
 
-    &__subtitle {}
+    &__subtitle {
+        width: 80%;
+        margin: 25px auto;
+        @include font-style (500, $subtitle-font-size, 39px);
+    }
 
     &__visible-wrapper {
         width: 80%;
-        max-width: 1432px;
         margin: 0 auto;
         display: flex;
         justify-content: space-around;
     }
 
-    &__collapsible {}
+    &__collapsible-wrapper {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-around;
+
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-in;
+    }
 
     &__wax {}
 
     &__special {}
 
     &__product-card {
-        width: 20%;
+        width: 25%;
+        margin-right: 20px;
         outline: 1.3px solid $bg-color-light;
     }
 
@@ -58,6 +85,7 @@
     &__card-subtitle {
         width: 100%;
         @include font-style (500, $small-text-font-size, 24px);
+        text-transform: uppercase;
     }
 
     &__size {
@@ -68,7 +96,8 @@
     }
 
     &__size-option {
-        width: 52px;
+        // width: 52px;
+        width: 18%;
         // max-width: 52px;
         padding: 6px;
         margin-right: 6px;
@@ -78,7 +107,30 @@
     }
 
     &__button-buy {
+        width: 35%;
         @include button-main (118px, 15px, $button-font-size);
+        text-transform: uppercase;
         // @include font-style (400, $button-font-size, 24px);
+    }
+
+    &__button-more {
+        width: 15%;
+        margin-top: 40px;
+        margin-left: 42.5%;
+        padding: 7px;
+
+        border: 1px solid $bg-color-main;
+        border-radius: 4px;
+
+        @include font-style (400, $button-font-size, 42px);
+        text-transform: uppercase;
+
+        background-color: $bg-color-white;
+        color: $text-color-title;
+
+        img {
+            display: inline;
+            margin-left: 10px;
+        }
     }
 }
