--- a/scss/style.css
+++ b/scss/style.css
@@ -186,15 +186,46 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 .products {
   font-family: "Rubik", sans-serif;
 }
+.products__title-group {
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+}
+.products__title-group img {
+  width: 10%;
+}
+.products__title {
+  margin-left: 20px;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 40px;
+  color: #D71635;
+}
+.products__subtitle {
+  width: 80%;
+  margin: 25px auto;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 39px;
+}
 .products__visible-wrapper {
   width: 80%;
-  max-width: 1432px;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
 }
+.products__collapsible-wrapper {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in;
+}
 .products__product-card {
-  width: 20%;
+  width: 25%;
+  margin-right: 20px;
   outline: 1.3px solid #EEF3FD;
 }
 .products__card-img {
@@ -225,6 +256,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  text-transform: uppercase;
 }
 .products__size {
   display: flex;
@@ -233,7 +265,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   align-items: center;
 }
 .products__size-option {
-  width: 52px;
+  width: 18%;
   padding: 6px;
   margin-right: 6px;
   font-weight: 300;
@@ -243,6 +275,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #EEF3FD;
 }
 .products__button-buy {
+  width: 35%;
   max-width: 118px;
   padding: 15px;
   border: none;
@@ -254,4 +287,23 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #D71635;
   color: #FFFFFF;
   cursor: pointer;
+  text-transform: uppercase;
+}
+.products__button-more {
+  width: 15%;
+  margin-top: 40px;
+  margin-left: 42.5%;
+  padding: 7px;
+  border: 1px solid #D71635;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 42px;
+  text-transform: uppercase;
+  background-color: #FFFFFF;
+  color: #D71635;
+}
+.products__button-more img {
+  display: inline;
+  margin-left: 10px;
 }
