--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,9 @@
 @import './blocks/about';
 @import './blocks/products';
 @import './blocks/photos';
-@import './blocks/block_6';
+@import './blocks/convinience';
 @import './blocks/service';
+@import './blocks/block-list';
 
 @import './blocks/contacts';
 @import './blocks/footer';
