--- a/scss/blocks/_convinience.scss
+++ b/scss/blocks/_convinience.scss
@@ -7,8 +7,8 @@
 
 .card-wrapper {
     display: flex;
-    justify-content: space-between;
     max-width: 100%;
+    gap: 23px;
     margin: 66px auto 54px;
 }
 
@@ -43,6 +43,7 @@
 
     &__image {
         max-height: 82px;
+        margin-top: 30px;
     }
 
     &__slogan {
@@ -58,54 +59,41 @@
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
     .convinience {
-        max-width: 579px;
-        // margin: 0 auto;
-        // font-family: $main-font;
-        // font-weight: 400;
+        max-width: 750px;
+        margin: 0 auto;
     }
     
     .card-wrapper {
         display: flex;
-        justify-content: space-between;
-        max-width: 100%;
-        margin: 66px auto 54px;
+        flex-wrap: wrap;
+        gap: 31px;
+        max-width: 580px;
+        margin: 50px auto 28px;
     }
     
     .card-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        max-width: 337px;
-        min-width: 337px;
-        max-height: 328px;
-        min-height: 328px;
-        padding: 21px 19px 48px 19px;
-        background-color: $bg-color-light;
-        border: 1px solid #C4C4C4;
-        border-radius: 4px;
+        max-width: 274px;
+        min-width: 274px;
+        max-height: 271px;
+        min-height: 271px;
+        padding: 16px 15px 34px 15px;
     
         &__button {
             align-self: flex-start;
-            max-width: 160px;
-            min-width: 160px;
-            max-height: 44px;
-            min-height: 44px;
-            font-size: 20px;
-            text-align: center;
-            text-transform: uppercase;
-            color: $text-color-title;
-            background-color: rgba(215, 22, 53, 0.15);
-            border: none;
-            border-radius: 4px;
+            max-width: 125px;
+            min-width: 125px;
+            max-height: 34px;
+            min-height: 34px;
+            font-size: 15px;
         }
     
         &__image {
-            max-height: 82px;
+            max-height: 65px;
+            margin-top: 25px;
         }
     
         &__slogan {
-            font-size: 24px;
+            font-size: 19px;
             text-align: center;
         }
     }
