--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -8,12 +8,12 @@
     &_bg-grey {
         max-height: 537px;
         min-height: 537px;
+        margin-top: 90px;
+        padding-top: 57px;
         background-color: $bg-color-light;
 
         &__image {
             max-height: 423px;
-            // margin: auto;
-            margin-top: 57px;
             margin-right: 306px;
             margin-bottom: 57px;
             margin-left: 1035px;
@@ -40,36 +40,38 @@
     }
 }
 
-.block-list {
-    margin-bottom: 15px;
-
-    &__title {
-        margin-bottom: 15px;
-    }
-}
 
 @media screen and (min-width: 1025px) and (max-width: 1440px) {
+    
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
     .service {
-        // position: relative;
-        // max-width: 1920px;
-        // margin: 0 auto;
+        position: relative;
+        max-width: 750px;
+        margin: 0 auto;
         // font-family: $main-font;
         // font-weight: 400;
-
+    
         &_bg-grey {
-            // max-height: 537px;
-            // min-height: 537px;
+            // max-height: 1091px;
+            min-height: 1091px;
+            margin-top: 47px;
+            padding-top: 647px;
             // background-color: $bg-color-light;
-
+    
             &__image {
-                max-height: 400px;
-                // margin-top: 57px;
-                margin-right: 306px;
-                // margin-bottom: 57px;
-                margin-left: 850px;
+                max-height: 401px;
+                // margin: auto;
+                // margin-top: 200px;
+                margin-right: 153px;
+                margin-bottom: 43px;
+                margin-left: 50px;
             }
         }
-
+    
         &_bg-red {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -77,30 +79,18 @@
             min-height: 670px;
             background-color: $bg-color-main;
         }
-
+    
         &_bg-white {
             position: absolute;
             top: 0;
-            left: 120px;
+            left: 0;
             z-index: 1;
-            max-height: 700px;
-            min-height: 700px;
-            max-width: 650px;
+            max-height: 622px;
+            min-height: 622px;
+            max-width: 610px;
             // background-color: $bg-color-white;
         }
     }
-
-    .block-list {
-        margin-bottom: 15px;
-
-        &__title {
-            margin-bottom: 15px;
-        }
-    }
 }
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {}
-
-@media screen and (min-width: 481px) and (max-width: 768px) {}
 
 @media screen and (min-width: 320px) and (max-width: 480px) {}
