--- a/scss/blocks/_title-container.scss
+++ b/scss/blocks/_title-container.scss
@@ -1,5 +1,5 @@
 .title-container {
-    margin-left: 245px;
+
     &_contacts {
         margin-top: 21px;
         margin-left: 245px;
@@ -24,7 +24,26 @@
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {}
 
-@media screen and (min-width: 481px) and (max-width: 768px) {}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .title-container {
+
+        &_contacts {
+            margin-top: 21px;
+            margin-left: 245px;
+        }
+
+        &__icon,
+        &__title {
+            display: inline-block;
+            margin-top: 32px;
+        }
+
+        &__title {
+            margin-left: 21px;
+            font-size: 30px;
+        }
+    }
+}
 
 @media screen and (min-width: 320px) and (max-width: 480px) {}
 
