--- a/scss/style.css
+++ b/scss/style.css
@@ -377,8 +377,8 @@ body {
 
 .card-wrapper {
   display: flex;
-  justify-content: space-between;
   max-width: 100%;
+  gap: 23px;
   margin: 66px auto 54px;
 }
 
@@ -412,6 +412,7 @@ body {
 }
 .card-item__image {
   max-height: 82px;
+  margin-top: 30px;
 }
 .card-item__slogan {
   font-size: 24px;
@@ -420,47 +421,37 @@ body {
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .convinience {
-    max-width: 579px;
+    max-width: 750px;
+    margin: 0 auto;
   }
   .card-wrapper {
     display: flex;
-    justify-content: space-between;
-    max-width: 100%;
-    margin: 66px auto 54px;
+    flex-wrap: wrap;
+    gap: 31px;
+    max-width: 580px;
+    margin: 50px auto 28px;
   }
   .card-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 337px;
-    min-width: 337px;
-    max-height: 328px;
-    min-height: 328px;
-    padding: 21px 19px 48px 19px;
-    background-color: #EEF3FD;
-    border: 1px solid #C4C4C4;
-    border-radius: 4px;
+    max-width: 274px;
+    min-width: 274px;
+    max-height: 271px;
+    min-height: 271px;
+    padding: 16px 15px 34px 15px;
   }
   .card-item__button {
     align-self: flex-start;
-    max-width: 160px;
-    min-width: 160px;
-    max-height: 44px;
-    min-height: 44px;
-    font-size: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #D71635;
-    background-color: rgba(215, 22, 53, 0.15);
-    border: none;
-    border-radius: 4px;
+    max-width: 125px;
+    min-width: 125px;
+    max-height: 34px;
+    min-height: 34px;
+    font-size: 15px;
   }
   .card-item__image {
-    max-height: 82px;
+    max-height: 65px;
+    margin-top: 25px;
   }
   .card-item__slogan {
-    font-size: 24px;
+    font-size: 19px;
     text-align: center;
   }
 }
@@ -474,11 +465,12 @@ body {
 .service_bg-grey {
   max-height: 537px;
   min-height: 537px;
+  margin-top: 90px;
+  padding-top: 57px;
   background-color: #EEF3FD;
 }
 .service_bg-grey__image {
   max-height: 423px;
-  margin-top: 57px;
   margin-right: 306px;
   margin-bottom: 57px;
   margin-left: 1035px;
@@ -501,18 +493,22 @@ body {
   background-color: #FFFFFF;
 }
 
-.block-list {
-  margin-bottom: 15px;
-}
-.block-list__title {
-  margin-bottom: 15px;
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1440px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .service {
+    position: relative;
+    max-width: 750px;
+    margin: 0 auto;
+  }
+  .service_bg-grey {
+    min-height: 1091px;
+    margin-top: 47px;
+    padding-top: 647px;
+  }
   .service_bg-grey__image {
-    max-height: 400px;
-    margin-right: 306px;
-    margin-left: 850px;
+    max-height: 401px;
+    margin-right: 153px;
+    margin-bottom: 43px;
+    margin-left: 50px;
   }
   .service_bg-red {
     display: grid;
@@ -524,17 +520,34 @@ body {
   .service_bg-white {
     position: absolute;
     top: 0;
-    left: 120px;
+    left: 0;
     z-index: 1;
-    max-height: 700px;
-    min-height: 700px;
-    max-width: 650px;
+    max-height: 622px;
+    min-height: 622px;
+    max-width: 610px;
   }
+}
+.block-list {
+  margin-bottom: 15px;
+}
+.block-list__title {
+  margin-bottom: 15px;
+  font-size: 18px;
+}
+.block-list__item {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
   .block-list {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   .block-list__title {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  .block-list__item {
+    font-size: 16px;
   }
 }
 .contacts {
@@ -647,9 +660,6 @@ body {
   font-size: 30px;
 }
 
-.title-container {
-  margin-left: 245px;
-}
 .title-container_contacts {
   margin-top: 21px;
   margin-left: 245px;
@@ -666,6 +676,20 @@ body {
   color: #D71635;
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .title-container_contacts {
+    margin-top: 21px;
+    margin-left: 245px;
+  }
+  .title-container__icon, .title-container__title {
+    display: inline-block;
+    margin-top: 32px;
+  }
+  .title-container__title {
+    margin-left: 21px;
+    font-size: 30px;
+  }
+}
 .content-container {
   max-width: 610px;
   margin: 46px 44px 40px 52px;
@@ -737,6 +761,69 @@ body {
   margin-left: 119px;
 }
 
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .content-container {
+    max-width: 530px;
+    margin: 31px 32px 75px 37px;
+    line-height: 24px;
+  }
+  .content-container__item {
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  .content-container__item_tiny {
+    font-size: 14px;
+    color: #878787;
+  }
+  .content-container__icon {
+    max-height: 44px;
+    margin-bottom: 21px;
+  }
+  .content-container_left {
+    max-width: 502px;
+    margin-top: 213px;
+    margin-left: 300px;
+    line-height: 27px;
+  }
+  .content-container_left__item {
+    position: relative;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #FFFFFF;
+  }
+  .content-container_left__item::before {
+    position: absolute;
+    content: "";
+    background-image: url("../../images/block-8_icons/icon_small_question_mark.svg");
+    width: 33px;
+    height: 33px;
+    top: 10px;
+    left: -100px;
+  }
+  .content-container_left__item_sp {
+    margin-top: 55px;
+    font-weight: 300;
+    line-height: 30px;
+  }
+  .content-container_left__item_sp::before {
+    position: absolute;
+    content: "";
+    background-image: url("../../images/block-8_icons/icon_phone.svg");
+    width: 66px;
+    height: 66px;
+    top: 0px;
+    left: -116px;
+  }
+  .content-container_left .content-container__item_bold {
+    font-size: 30px;
+  }
+  .content-container_right {
+    max-width: 615px;
+    margin-top: 213px;
+    margin-left: 119px;
+  }
+}
 .feedback-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -851,4 +938,47 @@ body {
   height: 10px;
   top: 20.5px;
   right: 22px;
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .block-btn {
+    position: relative;
+    max-width: 183px;
+    min-width: 183px;
+    max-height: 51px;
+    min-height: 51px;
+    padding-left: 23px;
+    font-size: 16px;
+  }
+  .block-btn_red::after {
+    position: absolute;
+    content: "";
+    background-image: url("../../images/arrows/white_arrow.svg");
+    width: 32px;
+    height: 10px;
+    top: 20.5px;
+    right: 20px;
+  }
+  .block-btn_white::after {
+    position: absolute;
+    content: "";
+    background-image: url("../../images/arrows/red_arrow.svg");
+    min-width: 32px;
+    height: 10px;
+    top: 20.5px;
+    right: 20px;
+  }
+  .block-btn_centered {
+    margin-right: 283px;
+    margin-left: 283px;
+  }
+  .block-btn_centered::after {
+    position: absolute;
+    content: "";
+    background-image: url("../../images/arrows/white_arrow.svg");
+    min-width: 32px;
+    height: 10px;
+    top: 20.5px;
+    right: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
